--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <hack-text></hack-text>
+    <div id="app">
+       <hack-text></hack-text>
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
