--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div id="app">
-       <hack-text></hack-text>
+       <hack-text text="slept@slept.black"></hack-text>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
